initial commit answer 6

--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 ADDRESS=127.0.0.1:8080
+PG_USER=postgres
+PG_PASSWORD=angga123
+PG_HOST=127.0.0.1
+PG_PORT=5432
+PG_DBNAME=db_haioo
+PG_SSLMODE=disable
